objects/thankful__CasesToProcess__c.object
<CustomObject>
    <description>Object to store Case information  that needs to be sent over to Thankful. Once a case is successfully processed,  case will be automatically removed from this object. In case of errors, records stay for tracking purposes.</description>
    <fields>
        <fullName>thankful__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Case that needs to be processed (notify to thankful webhook)</description>
        <inlineHelpText>Reference to Case that needs to be processed (notify to thankful webhook)</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases To Process</relationshipLabel>
        <relationshipName>CasesToProcess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>thankful__Key__c</fullName>
        <description>Technical field (External ID) that will be used to UPSERT a new CTP record. It will be in format of &lt;CASE ID + CTP STATUS&gt;</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field (External ID) that will be used to UPSERT a new CTP record. It will be in format of &lt;CASE ID + CTP STATUS&gt;</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__Status__c</fullName>
        <description>Indicates the Integration Status with Thankful AI API</description>
        <inlineHelpText>Indicates the Integration Status with Thankful AI API</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case To Process</label>
    <listViews>
        <fullName>thankful__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTP#-{00000}</displayFormat>
        <label>Cases To Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases To Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>